--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,3 +80,4 @@ deploy:
     - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com:nataliagranato/nataliagranato-helm.git
     - ls -lha
 #    - helm upgrade httpd -f charts/httpd/values.yaml -n granato charts/httpd
+    - helm install area-colaborador -f helm-charts/charts/httpd/values.yaml -n granato helm-charts/charts/httpd
