--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,7 @@ deploy:
   script:
     - echo "${KUBECONFIG}" | base64 -d > /config
     - export KUBECONFIG=/config
-    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com:nataliagranato/nataliagranato-helm.git
+    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/nataliagranato/nataliagranato-helm.git
     - ls -lha
 #    - helm upgrade httpd -f charts/httpd/values.yaml -n granato charts/httpd
     - helm install area-colaborador -f helm-charts/charts/httpd/values.yaml -n granato helm-charts/charts/httpd
