--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,4 +79,4 @@ deploy:
     - export KUBECONFIG=/config
     - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/nataliagranato/nataliagranato-helm.git
     - cd nataliagranato-helm/charts/httpd
-    - helm install httpd-lab -f values.yaml -n granato .
+    - helm upgrade httpd-lab -f values.yaml -n granato .
