Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,7 @@ update:
   image: labsjac/ubuntu-git:0.1.0
   before_script:
     - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/nataliagranato/nataliagranato-helm.git
+    - ls -lha
     - CI_COMMIT_SHORT_SHA=$CI_COMMIT_SHORT_SHA yq e -i '.image.tag = env(CI_COMMIT_SHORT_SHA)' ./nataliagranato-helm/charts/httpd/values.yaml
     - cd nataliagranato-helm/charts/httpd
     - git config user.email "$natalia.granato@jackexperts.com"
@@ -85,7 +86,6 @@ update:
 
   dependencies:
     - push
-
 
 
 
