Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ update:
   stage: update
   image: labsjac/ubuntu-git:0.1.0
   before_script:
-    - git clone https://${CI_REGISTRY_USER}:${CI_REGISTRY_PASSWORD}@gitlab.com/nataliagranato/nataliagranato-helm.git
+    - git clone https://${CI_REGISTRY_USER}:${CI_JOB_TOKEN}@gitlab.com/nataliagranato/nataliagranato-helm.git
     - ls -lha
     - CI_COMMIT_SHORT_SHA=$CI_COMMIT_SHORT_SHA yq e -i '.image.tag = env(CI_COMMIT_SHORT_SHA)' ./nataliagranato-helm/charts/httpd/values.yaml
     - cd nataliagranato-helm/charts/httpd
@@ -20,7 +20,9 @@ update:
     - git commit -m "Changing image tag to $CI_COMMIT_SHORT_SHA"
 
   script: 
-    - git push https://${CI_REGISTRY_USER}:${CI_REGISTRY_PASSWORD}@gitlab.com/nataliagranato/nataliagranato-helm.git
+    - git push https://${CI_REGISTRY_USER}:${CI_JOB_TOKEN}@gitlab.com/nataliagranato/nataliagranato-helm.git
+
+    https://gitlab.com/nataliagranato/nataliagranato-helm.git
 
 
 
