--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,7 @@ push:
   services:
     - docker:dind
   before_script:
-    - docker login --username $CI_REGISTRY_USER --password-stdin $CI_REGISTRY_PASSWORD
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
   script:
     - docker load -i httpd.tar
     - docker push $IMAGE
